# dundie-rewards

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  alembic.ini  conftest.py  lista.txt  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  run.cmd  setup.py  sql_example.db
.github/workflows/: main.yml
assets/: InsertPerson.sql  database.db  database.example.json  database.json  dbsqlmodel.db  people.csv
docs/: how_to_install.md  how_to_use.md  index.md  roadmap.md
dundie/: __init__.py  __main__.py  cli.py  core.py  database.py  models.py  settings.py  sqlalch_example.py  sqlamodel_example.py  sqlite_create.py  sqlite_example.py
dundie/utils/: __init__.py  db.py  email.py  exchange.py  log.py  user.py
integration/: __init__.py  conftest.py  constants.py  test_01_load.py  test_i01_load.py
migrations/: env.py  script.py.mako
migrations/versions/: 2043b84bd5e5_initial.py
tests/: __init__.py  conftest.py  constants.py  test_01_load.py  test_02_utils.py  test_03_database.py  test_04_read.py  test_05_add.py
tests/assets/: people.csv
